--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "metalsmith-in-place": "^1.0.1",
     "metalsmith-layouts": "^1.0.0",
     "metalsmith-markdown": "^0.2.1",
-    "metalsmith-permalinks": "^0.4.0"
+    "metalsmith-permalinks": "^0.4.0",
+    "nunjucks": "^1.3.4"
   }
 }
